Fix css for speakers images on small width device

--- a/_sass/partials/_zoe-effect.scss
+++ b/_sass/partials/_zoe-effect.scss
@@ -55,7 +55,7 @@ $figcaption-color: #3c4a50;
         -webkit-background-size: 115%;
         background-size: 115%;
         @media (max-width: 767px) {
-            background-position: center left;
+            background-position: top left;
             -webkit-background-size: 105%;   
             background-size: 105%;   
         }
